full screen video on landing page

--- a/app/Resources/views/default/landing.html.twig
+++ b/app/Resources/views/default/landing.html.twig
@@ -20,6 +20,7 @@
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,300,700' rel='stylesheet' type='text/css'>
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href="{{ asset('assets/css/nucleo-icons.css') }}" rel="stylesheet">
+    <link href="{{ asset('assets/app/css/style.css') }}" rel="stylesheet">
 
 </head>
 <body>
@@ -64,9 +65,22 @@
     </div>
 </nav>
 
-<div class="page-header" data-parallax="true" style="background-image: url('{{ asset('assets/img/alex-jones-8205.jpg') }}');">
-    <div class="filter"></div>
+<div class="page-header" data-parallax="true" style="background-color: black">
+    {#<div class="filter"></div>#}
     <div class="container">
+        <video poster="{{ asset('assets/img/alex-jones-8205.jpg') }}" id="bgvid" playsinline autoplay loop>
+            <!-- WCAG general accessibility recommendation is that media such as background video play through only once. Loop turned on for the purposes of illustration; if removed, the end of the video will fade in the same way created by pressing the "Pause" button  -->
+            <source src="{{ asset('assets/videos/shout.mp4') }}" type="video/webm">
+            <source src="{{ asset('assets/videos/shout.mp4') }}" type="video/mp4">
+        </video>
+        {#<div id="polina">#}
+            {#<h1>Polina</h1>#}
+            {#<p>filmed by Alexander Wagner 2011#}
+            {#<p><a href="http://thenewcode.com/777/Create-Fullscreen-HTML5-Page-Background-Video">original article</a>#}
+            {#<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur porta dictum turpis, eu mollis justo gravida ac. Proin non eros blandit, rutrum est a, cursus quam. Nam ultricies, velit ac suscipit vehicula, turpis eros sollicitudin lacus, at convallis mauris magna non justo. Etiam et suscipit elit. Morbi eu ornare nulla, sit amet ornare est. Sed vehicula ipsum a mattis dapibus. Etiam volutpat vel enim at auctor.</p>#}
+            {#<p>Aenean pharetra convallis pellentesque. Vestibulum et metus lectus. Nunc consectetur, ipsum in viverra eleifend, erat erat ultricies felis, at ultricies mi massa eu ligula. Suspendisse in justo dapibus metus sollicitudin ultrices id sed nisl.</p>#}
+            {#<button>Pause</button>#}
+        {#</div>#}
         <div class="motto text-center">
             {% if quote is not empty %}
                 <h1>Quote for you</h1>
@@ -76,8 +90,8 @@
                 <h1 class="title">What is Shout?</h1>
                 <h3>Shout is a problem sharing site which allows the “shoutee” to express his life story, to lessen the emotion and receive advices from other user.</h3>
             {% endif %}
-            
-            <br />
+
+            {#<br />#}
             {#<a href="https://www.youtube.com/" target="_blank" class="btn btn-outline-neutral btn-round"><i class="fa fa-play"></i>Browse More</a>#}
             {#<button type="button" class="btn btn-outline-neutral btn-round">Download</button>#}
         </div>
@@ -90,182 +104,11 @@
                 <div class="col-md-8 offset-md-2">
                     <h2 class="title">What is Shout?</h2>
                     <h5 class="description">Shout is a problem sharing site which allows the “shoutee” to express his life story, to lessen the emotion and receive advices from other user.</h5>
-                    <br>
-                    {#<a href="#paper-kit" class="btn btn-danger btn-round">See Details</a>#}
                 </div>
             </div>
             <br/><br/>
-            {#<div class="row">#}
-                {#<div class="col-md-3">#}
-                    {#<div class="info">#}
-                        {#<div class="icon icon-danger">#}
-                            {#<i class="nc-icon nc-album-2"></i>#}
-                        {#</div>#}
-                        {#<div class="description">#}
-                            {#<h4 class="info-title">Beautiful Gallery</h4>#}
-                            {#<p class="description">Spend your time generating new ideas. You don't have to think of implementing.</p>#}
-                            {#<a href="#pkp" class="btn btn-link btn-danger">See more</a>#}
-                        {#</div>#}
-                    {#</div>#}
-                {#</div>#}
-                {#<div class="col-md-3">#}
-                    {#<div class="info">#}
-                        {#<div class="icon icon-danger">#}
-                            {#<i class="nc-icon nc-bulb-63"></i>#}
-                        {#</div>#}
-                        {#<div class="description">#}
-                            {#<h4 class="info-title">New Ideas</h4>#}
-                            {#<p>Larger, yet dramatically thinner. More powerful, but remarkably power efficient.</p>#}
-                            {#<a href="#pkp" class="btn btn-link btn-danger">See more</a>#}
-                        {#</div>#}
-                    {#</div>#}
-                {#</div>#}
-                {#<div class="col-md-3">#}
-                    {#<div class="info">#}
-                        {#<div class="icon icon-danger">#}
-                            {#<i class="nc-icon nc-chart-bar-32"></i>#}
-                        {#</div>#}
-                        {#<div class="description">#}
-                            {#<h4 class="info-title">Statistics</h4>#}
-                            {#<p>Choose from a veriety of many colors resembling sugar paper pastels.</p>#}
-                            {#<a href="#pkp" class="btn btn-link btn-danger">See more</a>#}
-                        {#</div>#}
-                    {#</div>#}
-                {#</div>#}
-                {#<div class="col-md-3">#}
-                    {#<div class="info">#}
-                        {#<div class="icon icon-danger">#}
-                            {#<i class="nc-icon nc-sun-fog-29"></i>#}
-                        {#</div>#}
-                        {#<div class="description">#}
-                            {#<h4 class="info-title">Delightful design</h4>#}
-                            {#<p>Find unique and handmade delightful designs related items directly from our sellers.</p>#}
-                            {#<a href="#pkp" class="btn btn-link btn-danger">See more</a>#}
-                        {#</div>#}
-                    {#</div>#}
-                {#</div>#}
-            {#</div>#}
-
         </div>
     </div>
-
-    {#<div class="section section-dark text-center">#}
-        {#<div class="container">#}
-            {#<h2 class="title">Lorem lorem lang muna</h2>#}
-            {#<div class="row">#}
-                {#<div class="col-md-4">#}
-                    {#<div class="card card-profile card-plain">#}
-                        {#<div class="card-avatar">#}
-                            {#<a href="#avatar"><img src="../assets/img/faces/clem-onojeghuo-3.jpg" alt="..."></a>#}
-                        {#</div>#}
-                        {#<div class="card-block">#}
-                            {#<a href="#paper-kit">#}
-                                {#<div class="author">#}
-                                    {#<h4 class="card-title">Henry Ford</h4>#}
-                                    {#<h6 class="card-category">Product Manager</h6>#}
-                                {#</div>#}
-                            {#</a>#}
-                            {#<p class="card-description text-center">#}
-                                {#Teamwork is so important that it is virtually impossible for you to reach the heights of your capabilities or make the money that you want without becoming very good at it.#}
-                            {#</p>#}
-                        {#</div>#}
-                        {#<div class="card-footer text-center">#}
-                            {#<a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-twitter"></i></a>#}
-                            {#<a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-google-plus"></i></a>#}
-                            {#<a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-linkedin"></i></a>#}
-                        {#</div>#}
-                    {#</div>#}
-                {#</div>#}
-
-                {#<div class="col-md-4">#}
-                    {#<div class="card card-profile card-plain">#}
-                        {#<div class="card-avatar">#}
-                            {#<a href="#avatar"><img src="../assets/img/faces/joe-gardner-2.jpg" alt="..."></a>#}
-                        {#</div>#}
-                        {#<div class="card-block">#}
-                            {#<a href="#paper-kit">#}
-                                {#<div class="author">#}
-                                    {#<h4 class="card-title">Sophie West</h4>#}
-                                    {#<h6 class="card-category">Designer</h6>#}
-                                {#</div>#}
-                            {#</a>#}
-                            {#<p class="card-description text-center">#}
-                                {#A group becomes a team when each member is sure enough of himself and his contribution to praise the skill of the others. No one can whistle a symphony. It takes an orchestra to play it.#}
-                            {#</p>#}
-                        {#</div>#}
-                        {#<div class="card-footer text-center">#}
-                            {#<a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-twitter"></i></a>#}
-                            {#<a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-google-plus"></i></a>#}
-                            {#<a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-linkedin"></i></a>#}
-                        {#</div>#}
-                    {#</div>#}
-                {#</div>#}
-
-                {#<div class="col-md-4">#}
-                    {#<div class="card card-profile card-plain">#}
-                        {#<div class="card-avatar">#}
-                            {#<a href="#avatar"><img src="../assets/img/faces/erik-lucatero-2.jpg" alt="..."></a>#}
-                        {#</div>#}
-                        {#<div class="card-block">#}
-                            {#<a href="#paper-kit">#}
-                                {#<div class="author">#}
-                                    {#<h4 class="card-title">Robert Orben</h4>#}
-                                    {#<h6 class="card-category">Developer</h6>#}
-                                {#</div>#}
-                            {#</a>#}
-                            {#<p class="card-description text-center">#}
-                                {#The strength of the team is each individual member. The strength of each member is the team. If you can laugh together, you can work together, silence isn’t golden, it’s deadly.#}
-                            {#</p>#}
-                        {#</div>#}
-                        {#<div class="card-footer text-center">#}
-                            {#<a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-twitter"></i></a>#}
-                            {#<a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-google-plus"></i></a>#}
-                            {#<a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-linkedin"></i></a>#}
-                        {#</div>#}
-                    {#</div>#}
-                {#</div>#}
-            {#</div>#}
-        {#</div>#}
-    {#</div>#}
-
-    {#<div class="section landing-section">#}
-        {#<div class="container">#}
-            {#<div class="row">#}
-                {#<div class="col-md-8 offset-md-2">#}
-                    {#<h2 class="text-center">Keep in touch?</h2>#}
-                    {#<form class="contact-form">#}
-                        {#<div class="row">#}
-                            {#<div class="col-md-6">#}
-                                {#<label>Name</label>#}
-                                {#<div class="input-group">#}
-	                                        {#<span class="input-group-addon">#}
-	                                            {#<i class="nc-icon nc-single-02"></i>#}
-	                                        {#</span>#}
-                                    {#<input type="text" class="form-control" placeholder="Name">#}
-                                {#</div>#}
-                            {#</div>#}
-                            {#<div class="col-md-6">#}
-                                {#<label>Email</label>#}
-                                {#<div class="input-group">#}
-											{#<span class="input-group-addon">#}
-												{#<i class="nc-icon nc-email-85"></i>#}
-											{#</span>#}
-                                    {#<input type="text" class="form-control" placeholder="Email">#}
-                                {#</div>#}
-                            {#</div>#}
-                        {#</div>#}
-                        {#<label>Message</label>#}
-                        {#<textarea class="form-control" rows="4" placeholder="Tell us your thoughts and feelings..."></textarea>#}
-                        {#<div class="row">#}
-                            {#<div class="col-md-4 offset-md-4">#}
-                                {#<button class="btn btn-danger btn-lg btn-fill">Send Message</button>#}
-                            {#</div>#}
-                        {#</div>#}
-                    {#</form>#}
-                {#</div>#}
-            {#</div>#}
-        {#</div>#}
-    {#</div>#}
 </div>
 <footer class="footer section-dark">
     <div class="container">
@@ -295,5 +138,37 @@
 
 <!--  Paper Kit Initialization snd functons -->
 <script src="{{ asset('assets/js/paper-kit.js?v=2.0.0') }}"></script>
+<script>
+    var vid = document.getElementById("bgvid");
+    var pauseButton = document.querySelector("#polina button");
+
+    if (window.matchMedia('(prefers-reduced-motion)').matches) {
+        vid.removeAttribute("autoplay");
+        vid.pause();
+        pauseButton.innerHTML = "Paused";
+    }
+
+    function vidFade() {
+        vid.classList.add("stopfade");
+    }
+
+    vid.addEventListener('ended', function()
+    {
+// only functional if "loop" is removed
+        vid.pause();
+// to capture IE10
+        vidFade();
+    });
+    pauseButton.addEventListener("click", function() {
+        vid.classList.toggle("stopfade");
+        if (vid.paused) {
+            vid.play();
+            pauseButton.innerHTML = "Pause";
+        } else {
+            vid.pause();
+            pauseButton.innerHTML = "Paused";
+        }
+    })
+</script>
 
 </html>
