--- a/app/Resources/views/default/landing.html.twig
+++ b/app/Resources/views/default/landing.html.twig
@@ -20,7 +20,7 @@
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,300,700' rel='stylesheet' type='text/css'>
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href="{{ asset('assets/css/nucleo-icons.css') }}" rel="stylesheet">
-    <link href="{{ asset('assets/app/css/style.css') }}" rel="stylesheet">
+    <link href="{{ asset('assets/app/css/landing-vid.css') }}" rel="stylesheet">
 
 </head>
 <body>
@@ -68,7 +68,7 @@
 <div class="page-header" data-parallax="true" style="background-color: black">
     {#<div class="filter"></div>#}
     <div class="container">
-        <video poster="{{ asset('assets/img/alex-jones-8205.jpg') }}" id="bgvid" playsinline autoplay loop>
+        <video poster="{{ asset('assets/img/alex-jones-8205.jpg') }}" id="bgvid" playsinline muted autoplay loop>
             <!-- WCAG general accessibility recommendation is that media such as background video play through only once. Loop turned on for the purposes of illustration; if removed, the end of the video will fade in the same way created by pressing the "Pause" button  -->
             <source src="{{ asset('assets/videos/shout.mp4') }}" type="video/webm">
             <source src="{{ asset('assets/videos/shout.mp4') }}" type="video/mp4">
