new website icon and title modifications

--- a/app/Resources/views/emails/forgot_pass.html.twig
+++ b/app/Resources/views/emails/forgot_pass.html.twig
@@ -2,7 +2,7 @@
 <br>
 It looks like you requested a new password.
 
-If that sounds right, you can enter new password by clicking on the button below.
+If that sounds right, you can enter new password by clicking on the link below.
 
 <br>
 <a class="btn btn-primary btn-round" href="{{ url('password_reset', {passwordResetToken: token}) }}">Reset Password</a>.
