--- a/app/Resources/views/default/landing.html.twig
+++ b/app/Resources/views/default/landing.html.twig
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" href="{{ asset('assets/img/favicon.ico') }}">
+    <link rel="icon" type="image/png" href="{{ asset('favicon.ico') }}">
     <link rel="apple-touch-icon" sizes="76x76" href="{{ asset('assets/img/apple-icon.png') }}">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
