--- a/app/Resources/views/profile/show.html.twig
+++ b/app/Resources/views/profile/show.html.twig
@@ -1,9 +1,8 @@
 {% extends "base.html.twig" %}
 
 {% block title %}
-    {{ user.username }}
+    My Profile
 {% endblock %}
-
 
 {% block content %}
     <div class="wrapper">
