--- a/app/Resources/views/shout/new.html.twig
+++ b/app/Resources/views/shout/new.html.twig
@@ -1,5 +1,10 @@
 {% extends "base.html.twig" %}
 
+{% block title %}
+    New Shout
+{% endblock %}
+
+
 {% block content %}
     <div class="row" style="margin-top: 100px">
         <div class="col-md-6 offset-3">
