--- a/app/Resources/views/shout/shout_feed_content.html.twig
+++ b/app/Resources/views/shout/shout_feed_content.html.twig
@@ -46,7 +46,8 @@
                     {% endif %}
                 </div>
                 <div class="pull-right">
-                    <a class="btn btn-outline-primary btn-round" href="{{ path('shout_show', {slug: slug}) }}">Advice</a>
+                    <a class="btn btn-outline-primary btn-round" href="{{ path('shout_show', {slug: slug}) }}"><i
+                                class="fa fa-info"></i> View</a>
                 </div>
             </div>
         </div>
