--- a/app/Resources/views/notifications/overview.html.twig
+++ b/app/Resources/views/notifications/overview.html.twig
@@ -25,10 +25,10 @@
             {#</li>#}
             <p class="text-muted text-center"><b>No Notifications</b></p>
         {% endfor %}
-        <div class="dropdown-divider"></div>
-        <li class="dropdown-item">
-            <a class="text-center ml-4" href="{{ path('notification_list') }}">Show All Notifications<i class="fa fa-angle-right"></i>
-            </a>
-        </li>
+        {#<div class="dropdown-divider"></div>#}
+        {#<li class="dropdown-item">#}
+            {#<a class="text-center ml-4" href="{{ path('notification_list') }}">Show All Notifications<i class="fa fa-angle-right"></i>#}
+            {#</a>#}
+        {#</li>#}
     </ul>
 </li>
